--- a/src/containers/CharactersList/styles.module.scss
+++ b/src/containers/CharactersList/styles.module.scss
@@ -1,17 +1,17 @@
 .ListWrap {
-  padding: 20px 10px 10px 20px;
+  padding: 2em 1em 1em 2em;
 }
 
 .List {
-  margin-left: -20px;
-  margin-top: -20px;
+  margin-left: -2em;
+  margin-top: -2em;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
 }
 
 .ListItem {
-  flex: 1 0 300px;
-  margin-left: 10px;
-  margin-top: 10px;
+  flex: 1 0 20em;
+  margin-left: 1em;
+  margin-top: 1em;
 }
